131: Parsing of unit strings with single trailing asterisk leads to StringIndexOutOfBoundsException
Task-Url: https://github.com/unitsofmeasurement/indriya/issues/issues/131